// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders as expected when passing a different class 1`] = `
<body>
  <div>
    <input
      class="lab-checkbox dummy-class"
      id="test"
      name="test"
      type="checkbox"
      value="undefined"
    />
     
    <label
      class="lab-checkbox__label"
      for="test"
    >
      <span
        class="lab-checkbox__box"
      />
       
      Test
    </label>
  </div>
</body>
`;

exports[`Checkbox renders as expected when passing disabled as true 1`] = `
<body>
  <div>
    <input
      class="lab-checkbox "
      disabled=""
      id="test"
      name="test"
      type="checkbox"
      value="undefined"
    />
     
    <label
      class="lab-checkbox__label"
      for="test"
    >
      <span
        class="lab-checkbox__box"
      />
       
      Test
    </label>
  </div>
</body>
`;

exports[`Checkbox renders as expected when passing indeterminate as true 1`] = `
<body>
  <div>
    <input
      class="lab-checkbox "
      id="test"
      name="test"
      type="checkbox"
      value="undefined"
    />
     
    <label
      class="lab-checkbox__label"
      for="test"
    >
      <span
        class="lab-checkbox__box"
      />
       
      Test
    </label>
  </div>
</body>
`;

exports[`Checkbox renders with base props 1`] = `
<body>
  <div>
    <input
      class="lab-checkbox "
      id="test"
      name="test"
      type="checkbox"
      value="undefined"
    />
     
    <label
      class="lab-checkbox__label"
      for="test"
    >
      <span
        class="lab-checkbox__box"
      />
       
      Test
    </label>
  </div>
</body>
`;
